--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
     "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "react-dom": "^15.0.1",
+    "react-router": "^2.3.0"
   }
 }
